# Epitaph

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cmake_check.cmake  cmake_commands.cmake  cmake_dirs.cmake  cmake_options.cmake  mingw-toolchain.cmake
docs/: CONTRIBUTING.md  THANKS.md  THIRD-PARTY.md  TODO.md
libs/: CMakeLists.txt
libs/miniaudio/: miniaudio.c
resouces/: dummy.txt
scripts/: assets.lua
src/: main.c
src/bridge/: CMakeLists.txt
src/bridge/include/: cos_exit_code.h  epitaph_bridge.h  epitaph_exit_code.h  epitaph_gui.h
src/bridge/src/: exit_code.c
src/brigde/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/include/: header.h  pages.h
src/gui/include/fonts/: font_loading.h
src/gui/src/: main.c  stuff.cpp
src/gui/src/init/: init_fonts.c  init_window.c
src/gui/src/init/fonts/: ibm_plex_sans_medium_18.c  ibm_plex_sans_medium_30.c  ibm_plex_sans_regular_16.c  yuji_boku_16.c  yuji_boku_24.c  yuji_boku_45.c
src/gui/src/pages/: home_page.c  settings_page.c
